<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_title_label"/>
    
    <EditText
        android:id="@+id/diary_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diary_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_label"/>

    <EditText
        android:id="@+id/diary_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diary_content_hint"/>
    
    <Button
        android:id="@+id/diary_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018"/>

    <CheckBox
        android:id="@+id/diary_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_todo_label"/>
    
</LinearLayout>